--- a/UIPrototype/UIPrototype/UIPrototype.iOS/Info.plist
+++ b/UIPrototype/UIPrototype/UIPrototype.iOS/Info.plist
@@ -50,5 +50,14 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>UIPrototype</string>
+  
+  <!-- Map configuration-->
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Can we use your location at all times?</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Can we use your location when your app is being used?</string>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Can we use your location at all times?</string>
+  
 </dict>
 </plist>
