--- a/UIPrototype/UIPrototype/UIPrototype.UWP/UIPrototype.UWP.csproj
+++ b/UIPrototype/UIPrototype/UIPrototype.UWP/UIPrototype.UWP.csproj
@@ -148,10 +148,19 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
+    <PackageReference Include="Plugin.Share">
+      <Version>7.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>5.0.0.187-beta</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>0.6.0-preview</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.469394-pre1" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.0-Preview1-26502-02" />
     <PackageReference Include="Xamarin.Forms.Maps">
-      <Version>3.0.0.482510</Version>
+      <Version>3.1.0.469394-pre1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
