--- a/UIPrototype/UIPrototype/UIPrototype.iOS/Info.plist
+++ b/UIPrototype/UIPrototype/UIPrototype.iOS/Info.plist
@@ -58,6 +58,8 @@
   <string>Can we use your location when your app is being used?</string>
   <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
   <string>Can we use your location at all times?</string>
-  
+  <!--Access user's loction-->
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>This app needs access location when open.</string>
 </dict>
 </plist>
