--- a/UIPrototype/UIPrototype/UIPrototype/UIPrototype.csproj
+++ b/UIPrototype/UIPrototype/UIPrototype/UIPrototype.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
-    <PackageReference Include="Xamarin.Forms.Maps" Version="3.0.0.482510" />
+    <PackageReference Include="Plugin.Share" Version="7.1.1" />
+    <PackageReference Include="Xam.Plugin.Geolocator" Version="5.0.0.187-beta" />
+    <PackageReference Include="Xamarin.Essentials" Version="0.6.0-preview" />
+    <PackageReference Include="Xamarin.Forms" Version="3.1.0.469394-pre1" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="3.1.0.469394-pre1" />
   </ItemGroup>
 
   <ItemGroup>
